--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <a href="./assignment_5/index.html"><i>ASSIGNMENT-5</i></a><br>
     <a href="./assignment_6/index.html"><i>ASSIGNMENT-6</i></a><br>
     <a href="./assignment_7/index.html"><i>ASSIGNMENT-7</i></a><br>
-    <a href=""></a>
+    <a href="./assignment_8/index.html"><i>AASIGNMENT-8</i></a>
     <a href=""></a>
 </body>
 </html>
