--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <a href="./assignment_6/index.html"><i>ASSIGNMENT-6</i></a><br>
     <a href="./assignment_7/index.html"><i>ASSIGNMENT-7</i></a><br>
     <a href="./assignment_8/index.html"><i>AASIGNMENT-8</i></a><br>
-    <a href="./assignment_9/tasks/index.html"><i>ASSIGNMENT-9</i></a><br>
+    <a href="./assignment_9/index.html"><i>ASSIGNMENT-9</i></a><br>
     <a href=""></a><br>
     <a href=""></a><br>
     <a href=""></a><br>
